--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
-    "firebase": "^9.22.1",
+    "firebase": "^9.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "typescript": "^5.0.2",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "typescript": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,12 +45,22 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "eslint": "^8.42.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "typescript": "^5.1.3"
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^10.1.0",
+    "prettier": "^2.8.8",
+    "prop-types": "^15.8.1",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.2"
   }
 }
